--- a/MudXComponents.Examples/Pages/Grids/TransactionsGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/TransactionsGrid.razor
@@ -63,7 +63,7 @@
 
 @code{
 
-    public System.Collections.ObjectModel.ObservableCollection<TRANSACTIONS> DataSource { get; set; } = new();
+    public new System.Collections.ObjectModel.ObservableCollection<TRANSACTIONS> DataSource { get; set; } = new();
 
 
 
