--- a/MudXComponents/Components/MudGridX.razor
+++ b/MudXComponents/Components/MudGridX.razor
@@ -13,7 +13,7 @@
     }
 
 
-    <MudCard Elevation="4">
+    <MudCard Elevation="4" Style="width:100%!important">
         <MudCardHeader>
             <CardHeaderContent>
 
