--- a/MudXComponents.Examples/Pages/Grids/OrderDetails.razor
+++ b/MudXComponents.Examples/Pages/Grids/OrderDetails.razor
@@ -1,5 +1,5 @@
 ﻿
-<MudGridX EnableModelValidation="true"
+<MudGridX EnableModelValidation="true" 
           EnableSearch="false"
           EnablePagination="false"
           OnCreate="@CreateCommand"
@@ -53,7 +53,7 @@
 
 @code{
 
-    public System.Collections.ObjectModel.ObservableCollection<ORDER_DETAILS> DataSource { get; set; } = new();
+    public new System.Collections.ObjectModel.ObservableCollection<ORDER_DETAILS> DataSource { get; set; } = new();
 
 
 
