--- a/MudXComponents.Examples/Pages/Grids/TransactionsGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/TransactionsGrid.razor
@@ -21,7 +21,7 @@
     </HeaderButtons>
 
     <GridColumns>
-        <GridColumn
+        <GridXColumn
                     BindingType="string"
                     Order="1"
                     xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
@@ -33,7 +33,7 @@
                     Order="2"
                     xs="12" sm="12" md="2" lg="2" xl="2" xxl="2" />
 
-        <GridColumn
+        <GridXColumn
                     BindingType="DateTime"
                     Order="3"
                     xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
