--- a/MudXComponents.Examples/Pages/Grids/OrderDetails.razor
+++ b/MudXComponents.Examples/Pages/Grids/OrderDetails.razor
@@ -20,7 +20,7 @@
     </HeaderButtons>
 
     <GridColumns>
-        <GridColumn
+        <GridXColumn
                     BindingType="string"
                     Order="1"
                     xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
