--- a/MudXComponents.Examples/Pages/Grids/OrdersGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/OrdersGrid.razor
@@ -22,7 +22,7 @@
     </HeaderButtons>
 
     <GridColumns>
-        <GridColumn
+        <GridXColumn
                     BindingType="string"
                     Order="1"
                     xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
@@ -34,7 +34,7 @@
                     Order="2"
                     xs="12" sm="12" md="2" lg="2" xl="2" xxl="2" />
 
-        <GridColumn
+        <GridXColumn
                     BindingType="int"
                     Order="3"
                     xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
