--- a/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
@@ -6,7 +6,7 @@
 
 
 <MudGridX 
-        SmartCrud="false"
+        SmartCrud="true"
         EnableModelValidation="true"
         EnableSearch="true"
         OnCreate="@CreateCommand"
