--- a/MudXComponents/Components/GridSelect.razor
+++ b/MudXComponents/Components/GridSelect.razor
@@ -1,5 +1,5 @@
 ﻿@typeparam TModel        where TModel : new()
-@typeparam TSourceModel  where TSourceModel : class
+@typeparam TSourceModel  where TSourceModel : class, new () 
 
 @inherits ColumnBase<TModel>
 
