--- a/MudXComponents/Components/GridSettings.razor
+++ b/MudXComponents/Components/GridSettings.razor
@@ -18,6 +18,12 @@
             </MudItem>
 
             <MudItem xs="12" sm="12" md="12" lg="12" xl="12" xxl="12">
+                <MudSwitch @bind-Checked="@GridX.SmartCrud"
+                           ThumbIcon="@(GridX.SmartCrud==true ? Icons.Material.Filled.Done : Icons.Material.Filled.Close)"
+                           ThumbIconColor="@(GridX.SmartCrud==true ? Color.Success : Color.Error)">Smart Crud</MudSwitch>
+            </MudItem>
+
+            <MudItem xs="12" sm="12" md="12" lg="12" xl="12" xxl="12">
                 <MudSwitch @bind-Checked="@GridX.Virtualize"
                            ThumbIcon="@(GridX.Virtualize==true ? Icons.Material.Filled.Done : Icons.Material.Filled.Close)"
                            ThumbIconColor="@(GridX.Virtualize==true ? Color.Success : Color.Error)">Virtualize</MudSwitch>
@@ -28,6 +34,8 @@
                            ThumbIcon="@(GridX.MultiSelection==true ? Icons.Material.Filled.Done : Icons.Material.Filled.Close)"
                            ThumbIconColor="@(GridX.MultiSelection==true ? Color.Success : Color.Error)">MultiSelection</MudSwitch>
             </MudItem>
+
+
         </MudGrid>
         
       
