--- a/MudXComponents/Components/GridFabButton.razor
+++ b/MudXComponents/Components/GridFabButton.razor
@@ -1,4 +1,4 @@
-﻿@typeparam TModel  where TModel : new()
+@typeparam TModel  where TModel : new()
 @inherits ColumnBase<TModel>
 @implements IButton
 
