--- a/MudXComponents/Components/GridXColumn.razor
+++ b/MudXComponents/Components/GridXColumn.razor
@@ -1,4 +1,4 @@
-﻿@typeparam TModel   where TModel : new()
+@typeparam TModel   where TModel : new()
 @typeparam BindingType  where BindingType : notnull
 @inherits ColumnBase<TModel>
 
